# Aetheris

./: .gitignore  00_SYSTEM_CONSTITUTION.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  MEMORY.md  NEXT_SESSION.md  PROJECT_STATE.md  README.md  TASKS.md  drg_boot.txt  package.json  pyproject.toml  tsconfig.json
.aetheris/: execution.graph.json  execution.plan.json  execution.queue.json  execution_state.json  runtime.json
adrs/: 001-module-boundaries.md  002-state-ownership.md  003-event-model.md  004-configuration-hierarchy.md  005-memory-separation.md  006-skill-decomposition.md  007-script-execution.md  008-version-contract.md  009-platform-constraints.md  010-security-perimeter.md
config/: aetheris.yaml  brain.yaml  costs.yaml  gates.yaml  models.yaml
contracts/: config-manager.md  context-engine.md  event-bus.md  kernel.md  memory-engine.md  planner.md  plugin-manager.md  project-discovery.md  resource-router.md  telemetry-engine.md  verification-engine.md
docs/: AEKS_v1.0.md  AEOS_GLOBAL_OPERATING_POLICY.md  BENCHMARK_REPORT.md  DEPENDENCY_MATRIX.md  FINAL_ARB_REPORT.md  IMPLEMENTATION_TRACKER.md  MASTER_PROMPT.md  SECURITY_REVIEW.md  TRACEABILITY_MATRIX.md  USER_DOCUMENTATION.md  api.md
documentation/: CHANGELOG.md  walkthrough.md
planning/: ENGINEERING_REPORT.md  ENGINEERING_TEAM_ASSIGNMENT.md  IMPLEMENTATION_PLAN.md
rfcs/: RFC-000-Roadmap.md  RFC-003-Validation-Report.md  RFC-004-Engineering-Intelligence.md  RFC-006-Learning-System.md  RFC-007-Enterprise-Platform.md  RFC-008-AI-Organization.md  RFC-009-Self-Evolution.md  SPEC-001-WDE.md  SPEC-002-URUE.md  SPEC-003-PDE.md  SPEC-004-APE.md  SPEC-005-EDE.md  SPEC-006-EGE.md  SPEC-007-EKB.md  SPEC-008-QIA.md  SPEC-009-EDPE.md  SPEC-010-FPE.md  SPEC-011-BPE.md  SPEC-012-PE.md  SPEC-013-APIE.md  SPEC-014-SPE.md  SPEC-015-IPE.md  SPEC-016-ESPE.md  SPEC-017-DPE.md  SPEC-018-TPE.md  SPEC-019-DOPE.md  SPEC-020-EEPE.md  SPEC-021-RCPE.md  SPEC-022-CPE.md  SPEC-023-RPE.md  SPEC-024-CGPE.md  SPEC-025-OPE.md  SPEC-026-SPPE.md  SPEC-027-DRPE.md  SPEC-028-RRPE.md  SPEC-029-MLPE.md  SPEC-030-FEBC.md  SPEC-031-PVE.md  SPEC-032-TDE.md  SPEC-033-DGB.md  (+137 more)
schemas/: aetheris.schema.json  brain.schema.json  costs.schema.json  gates.schema.json  models.schema.json  plugins.schema.json
scratch/: Dockerfile  PRD.md  benchmark_goal_manager.py  execute_migration.py  generate_pdf.py  run_arb_v2.py  run_production_audit.py  run_tests.py  schema.prisma  test_v4_autonomous_loop.py
scripts/: antigravity_planner.py  build.py  compile_repo.py  compile_website_data.py  dev.py  doctor.py  generate_enterprise_governance.py  install.py  uninstall.py  upgrade_specs_enterprise.py
src/: __main__.py  auth_middleware.py  cli.py  config.py  context.py  db_init_bootstrap.sql  event_bus.py  gen_phase4.py  memory.py  plugins.py  registry_cache.py  scanner.py  skill_parser.py  skill_scanner.py  telemetry.py  utils.py  verify_phase4.py
(+1087 files in other folders)
