[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aetheris"
version = "3.1.0"
description = "Aetheris AI Engineering Operating System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.scripts]
aetheris = "kernel.core:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["kernel", "intelligence", "execution", "runtime", "learning", "enterprise", "organization", "evolution", "validation"]
